tests/error09.out
tests/error09.types:2:37-2:38: error:
    Contravariant variable 'a' must not be used in covariant positions.