tests/error09.types

type Foo (f : ±Type -> Type) -a = f a
